tests/reference/asr_preprocess-cpp_err7-2a5424f.stderr
C preprocessor error: #error This branch must trigger a #error
 --> tests/errors/cpp_err7.f90:5:1
  |
5 | #error This branch must trigger a #error
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
